--- a/CPP04/ex01/Makefile
+++ b/CPP04/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: jquil <jquil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/30 16:12:36 by jquil             #+#    #+#              #
-#    Updated: 2024/02/28 11:54:48 by jquil            ###   ########.fr        #
+#    Updated: 2024/03/01 14:19:08 by jquil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,9 @@ OBJS		=	$(SRC:.cpp=.o)
 
 COMPILE		=	c++
 
-FLAGS		=	-g3 -Wall -Wextra -Werror -std=c++98
+FLAGS		=	-Wall -Wextra -Werror -std=c++98 -MMD
+
+DEPS = $(OBJS:.o=.d)
 
 EXE_NAME	=	-o $(NAME)
 
@@ -48,3 +50,5 @@ re:	fclean all
 	${COMPILE} ${FLAGS} -c $< -o ${<:.cpp=.o}
 
 .PHONY:	all clean fclean re run
+
+-include $(DEPS)
