--- a/CPP04/ex03/Makefile
+++ b/CPP04/ex03/Makefile
@@ -6,20 +6,25 @@
 #    By: jquil <jquil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/30 16:12:36 by jquil             #+#    #+#              #
-#    Updated: 2024/02/28 11:55:24 by jquil            ###   ########.fr        #
+#    Updated: 2024/03/01 14:19:22 by jquil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC		=	src/main.cpp		\
-			src/AMateria.cpp	\
-			src/Character.cpp	\
+SRC		=	src/main.cpp			\
+			src/AMateria.cpp		\
+			src/Character.cpp		\
+			src/Cure.cpp			\
+			src/Ice.cpp				\
+			src/MateriaSource.cpp	\
 
 NAME		=	1v1
 OBJS		=	$(SRC:.cpp=.o)
 
 COMPILE		=	c++
 
-FLAGS		=	-g3 -Wall -Wextra -Werror -std=c++98
+FLAGS		=	-Wall -Wextra -Werror -std=c++98 -MMD
+
+DEPS = $(OBJS:.o=.d)
 
 EXE_NAME	=	-o $(NAME)
 
@@ -46,3 +51,5 @@ re:	fclean all
 	${COMPILE} ${FLAGS} -c $< -o ${<:.cpp=.o}
 
 .PHONY:	all clean fclean re run
+
+-include $(DEPS)
