--- a/CPP03/ex02/Makefile
+++ b/CPP03/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: jquil <jquil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/30 16:12:36 by jquil             #+#    #+#              #
-#    Updated: 2024/02/28 11:56:30 by jquil            ###   ########.fr        #
+#    Updated: 2024/02/29 17:34:26 by jquil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,7 +20,9 @@ OBJS		=	$(SRC:.cpp=.o)
 
 COMPILE		=	c++
 
-FLAGS		=	-Wall -Wextra -Werror -std=c++98
+FLAGS		=	-Wall -Wextra -Werror -std=c++98 -MMD
+
+DEPS = $(OBJS:.o=.d)
 
 EXE_NAME	=	-o $(NAME)
 
@@ -47,3 +49,5 @@ re:	fclean all
 	${COMPILE} ${FLAGS} -c $< -o ${<:.cpp=.o}
 
 .PHONY:	all clean fclean re run
+
+-include $(DEPS)
